Added endpoint to view api documentation
